Clean up task from supernode and sn manager
